add admin customer endpoint